samples/_failures_safe/1761475118_5c7c36_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7ee76cd9.c:166:1: error: expected identifier or ‘(’ at end of input
  166 | int
      | ^~~
